Fix spacing in other-menu

--- a/themes/habitmelon/static/css/base.css
+++ b/themes/habitmelon/static/css/base.css
@@ -78,6 +78,10 @@
     .other-menu {
         float: right;
     }
+    .other-menu li {
+        padding-left: 2px;
+        padding-right: 2px;
+    }
 
 }
 /* Centerpiece navigation element */
